cluster/core/security/crowdsec/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crowdsec
  namespace: security
  hosts:
    - 'metabase.${SECRET_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 3000
            host: crowdsec-service.networking.svc.cluster.local
          weight: 100
